# L3

./: .gitignore  .gitignore.txt  LICENSE  README.md  git_sheet.txt
S5/Analyse de données - développeur/: Terminale.xls
S5/Analyse de données - développeur/.ipynb_checkpoints/: tea-checkpoint.ipynb
S5/Fonctions avancées des SGBD/TP1 - Fonctions et triggers/: Tp1.sql  Tp1_Gwendal_Henry.sql  baseTP1.sql
S5/Fonctions avancées des SGBD/TP2-Stockage et indexation/: tp2.sql
S5/Fonctions avancées des SGBD/TP4/: TP4
S5/Programmation événementielle/: test.py
S5/Programmation événementielle/TP2 Tracé graphique en tenant compte de levenement Paint. Récupération du clic souris. Utilisation d/: TP2.py
S5/Programmation événementielle/TP3-20251119/: TP3_PyQt_base.py
S5/Programmation événementielle/TP4-20251124/: TP4_base.py  TP4_console.py
S5/Programmation événementielle/TP5-20251201/: tp5_part1_student.qml  tp5_part2_student.qml
S5/Programmation événementielle/Tea_Pré-requis/: testPyqt5.py
S5/Programmation événementielle/Tp1/: TP1.py  syracuse_bad.py
S5/Structures de données - avancé_20250915_1543/Arbres N-aires/Materiel-TP-ntree/tp-ntree-moodle/src/ntree/: CMakeLists.txt  ntree.c  test-ntree.c
S5/Sécurité - bases/Firewall/tp_firewall/: client.startup  (+3 more)
S5/Traitement du signal pour les objets intelligents/Tp1/: Tp1Exo1.m  Tp1Exo2.m  Tp1Exo3.m  Tp3.m  tpConvExo1.asv  tpConvExo1.m  tpConvExo2.m  tpConvExo3.m  tpConvExo4.m  tpConvExo5.m  tpConvFonction.m
S6/Vision embarquée et Intelligence artificielle/TP2/: Dense_Optical_Flow_OpenCV.py  Escalator.avi  Opical_flow.py  exemple.py  tp2.py
(+120 files in other folders)
